[package]
name = "redos-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redos"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
flate2 = "1.0.27"
ignore = "0.4.20"
nom = "7.1.3"
owo-colors = "3.5.0"
redos = { path = "../redos" }
reqwest = { version = "0.11.20", features = ["blocking"] }
swc_common = { version = "0.32.1", features = ["tty-emitter"] }
swc_ecma_ast = "0.109.1"
swc_ecma_parser = { version = "0.140.0", features = ["typescript"] }
swc_ecma_visit = "0.95.1"
tar = "0.4.40"
tempdir = "0.3.7"
