[package]
name = "redos-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
fancy-regex = { git = "https://github.com/LeoDog896/fancy-regex", rev = "edc7c1f" }
redos = { path = "../redos" }

[lib]
crate-type = ["cdylib", "rlib"]
