[package]
name = "redos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
regex-nfa = { path = "../regex-nfa" }
swc_ecma_parser = { version = "0.140.0", features = ["typescript"] }
